--- a/RPGQuests/.classpath
+++ b/RPGQuests/.classpath
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 7 [1.7.0_75]"/>
-	<classpathentry kind="lib" path="/Users/MoritzKlein/Documents/Java/Minecraft/Libs/spigot-1.8.3-R0.1-SNAPSHOT.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="https://hub.spigotmc.org/javadocs/spigot/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/Users/MoritzKlein/Documents/Java/Minecraft/Libs/citizensapi-2.0.16-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="/Users/MoritzKlein/Documents/Java/Minecraft/Libs/Vault.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre7"/>
+	<classpathentry kind="lib" path="C:/Users/Moritz/Documents/Java/Minecraft/Libaries/spigot-api-1.8.8-R0.1-SNAPSHOT-shaded.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Moritz/Documents/Java/Minecraft/Libaries/Vault.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Moritz/Documents/Java/Minecraft/Libaries/Citizens.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
