--- a/RPGQuests/.classpath
+++ b/RPGQuests/.classpath
@@ -2,7 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre7"/>
-	<classpathentry kind="lib" path="C:/Users/Moritz/Documents/Java/Minecraft/Libaries/spigot-api-1.8.8-R0.1-SNAPSHOT-shaded.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Moritz/Documents/Java/Minecraft/Libaries/spigot-api-1.8.8-R0.1-SNAPSHOT-shaded.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="https://hub.spigotmc.org/javadocs/spigot/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/Moritz/Documents/Java/Minecraft/Libaries/Vault.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Moritz/Documents/Java/Minecraft/Libaries/Citizens.jar"/>
 	<classpathentry kind="output" path="bin"/>
