Add saveQuestCompanions(UUID) Add loadQuestCompanions(UUID) Fix Register listeners after a companion is loaded

--- a/RPGQuests/src/config.yml
+++ b/RPGQuests/src/config.yml
@@ -1,2 +1,2 @@
-#Bestimmt das Zeitintervall, indem die ArrayListen "dropped_items" und "placed_blocks" gesäubert werden, um Speicher freizugeben! (in Minuten)
+#Bestimmt das Zeitintervall, indem die ArrayListen "dropped_items" und "placed_blocks" geleert werden, um Speicher freizugeben! (in Minuten)
 cleanup-intervall: 10
