Add QCommand Add HelpSubCommand Add ProgressSubCommand Add AvailbaleSubCommand Add Configuration Tool API methods and constructors

--- a/RPGQuests/src/plugin.yml
+++ b/RPGQuests/src/plugin.yml
@@ -1,8 +1,12 @@
 name: RPGQuests
-version: 0.8.6
+version: 0.9
 author: Cracksn0w
 
 loadbefore: [Citizens]
 depend: [Vault, Citizens]
 
 main: com.cracksn0w.rpgquests.RPGQuests
+
+commands:
+  q:
+    description: Hauptkommando von RPGQuests
